# miio_linux_open

./: README.md
miio_agent/: Makefile.am  configure.ac
miio_agent/src/: agent_client.c  agent_send_line.c  miio_agent.c  miio_agent.h  miio_json.c  miio_json.h
